<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <org.thoughtcrime.securesms.preferences.widgets.ProfilePreference
            android:key="preference_category_profile"/>

    <Preference android:key="preference_category_sms_mms"
                android:title="@string/preferences__sms_mms"
                android:icon="@drawable/outline_sms_24"/>

    <Preference android:key="preference_category_notifications"
                android:title="@string/preferences__notifications"
                android:icon="@drawable/outline_notifications_none_24"/>

    <Preference android:key="preference_category_app_protection"
                android:title="@string/preferences__privacy"
                android:icon="@drawable/outline_security_24"/>

    <Preference android:key="preference_category_appearance"
                android:title="@string/preferences__appearance"
                android:icon="@drawable/outline_color_lens_24"/>

    <Preference android:key="preference_category_chats"
                android:title="@string/preferences__chats"
                android:icon="@drawable/outline_question_answer_24"/>

    <Preference android:key="preference_category_devices"
                android:title="@string/preferences__linked_devices"
                android:icon="@drawable/outline_devices_24"/>

    <Preference android:key="preference_category_advanced"
                android:title="@string/preferences__advanced"
                android:icon="@drawable/outline_more_24"/>

</PreferenceScreen>
